2004-05-19  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, src/addressbook_window.cpp:
	More work to be able to add new local address books using EDS.

2004-05-18  Julien Puydt <julien.puydt@laposte.net>

	* src/druid.cpp: fixed a stupid bug in the video test.
	
2004-05-17  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp: Fixed function to add a
	GmAddressbook thanks to toshok @_ ximian.com.

2004-05-17  Damien Sandras  <dsandras@gnome.org>

	* src/druid.cpp: Better default settings.

2004-05-17  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: Do not use the dynamic video quality anymore.
	
	* src/endpoint.cpp: Same here.

	* src/pref_window.cpp: String changes suggested by Rob Giltrap.

2004-05-17  Julien Puydt <julien.puydt@laposte.net>

	* lib/gm_conf-glib.c: commented some more.
	
2004-05-16  Damien Sandras  <dsandras@gnome.org>

	* src/druid.cpp: Removed use of deprecated GConf key.

2004-05-16  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in: Removed unused GConf key.

	* lib/gm_conf-widgets_extensions.c, lib/gnome_prefs_window.c,
	lib/gnome_prefs_window.h: Added support for a GtkHScale in the prefs.

	* src/addressbook_window.cpp: Added comments.

	* src/config.cpp, src/endpoint.cpp, src/pref_window.cpp: Added support
	for a speed/quality slider in the preferences.... Improved quality
	with FFMpeg's H.263.

2004-05-16  Julien Puydt <julien.puydt@laposte.net>

	* lib/gm_conf.h, lib/gm_conf-gconf.c: commented some more.

2004-05-14  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Try to improve video quality.

2004-05-13  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Added support for OpenH323 H.263+ if present.

2004-05-12  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.*: Only display the list of usable codecs.

2004-05-11  Damien Sandras  <dsandras@gnome.org>

	* src/Makefile.am, src/pref_window.cpp: Removed codec_info.* from