@@ -1,3 +1,13 @@
+2004-05-20  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts.h:
+	Updated API. Minor fixes. Added function to get the list of
+	remote addressbooks.
+
+	* src/addressbook_window.cpp: Added possibility to add addressbooks,
+	to delete addressbooks. Prepared GUI to refresh ILS servers. Various
+	enhancements.
+
 2004-05-19  Damien Sandras  <dsandras@gnome.org>
 
 	* lib/contacts/gm_contacts-eds.cpp, src/addressbook_window.cpp:
